some files modified

--- a/code.ipynb
+++ b/code.ipynb
@@ -11,12 +11,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "import seaborn as sns\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "import matplotlib as mpl\n",
-    "import seaborn as sns"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -39,6 +38,7 @@
     "  - [季度分析](#section6)\n",
     "  - [月度分析](#section7)\n",
     "  - [节假日分析](#section8)\n",
+    "  - [RFM分析](#section9)\n",
     "- [5. 结论与建议](#section5) "
    ]
   },
@@ -1802,9 +1802,7 @@
   {
    "cell_type": "markdown",
    "id": "8eca5351-7ac5-454f-bf58-1249eb0576e8",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 节假日分析"
    ]
@@ -2562,6 +2560,14 @@
    "metadata": {},
    "source": [
     "下面我们进行RFM分析"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3483a7a-1b2e-4701-a7d0-07948b4b9a2e",
+   "metadata": {},
+   "source": [
+    "<a id=\"section9\"></a>"
    ]
   },
   {
